# GNCProject

./: CMakeLists.txt  README.md  ReadMe.txt
data/: log.csv  waypoint_list.txt
include/: Actions.h  CSVLogger.h  KalmanFilter.h  PIDController.h
scripts/: plot_wp_kfposvel.py
src/: main.cpp
